Cambiar el back que ya estaba para que ahora use la env var

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,8 @@
-version: "3.8"
-
 services:
   frontend:
     volumes:
       - ./frontend:/app
-      - /app/node_modules  # evita sobrescribir node_modules del contenedor
+      - /app/node_modules
     command: npm run dev
 
   backend1:
