--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,4 @@
+# Backend con balanceo simple entre instancias
 upstream backend_servers {
     server backend1:4000;
     server backend2:4000;
@@ -7,15 +8,27 @@ upstream backend_servers {
 server {
     listen 80;
 
+    # Rutas que empiezan con /api/ van al backend balanceado
     location /api/ {
-        proxy_pass http://backend_servers/;
+        proxy_pass http://backend_servers;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Connection "";
     }
 
+    # Rutas que empiezan con /compiler/ van al compilador en Python
     # location /compiler/ {
     #     proxy_pass http://compiler:5000;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
     # }
 
+    # Todo lo demás va al frontend (Next.js)
     location / {
         proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
     }
 }
