--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -7,9 +7,4 @@ services:
       - "80:80"
     env_file:
       - .env
-    networks:
-      - assessment-net
-
-networks:
-  assessment-net:
-    external: true
+    networks_mode: "host"
