--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -7,9 +7,20 @@ upstream backend_servers {
 server {
     listen 80;
 
+    location /api/auth/ {
+        proxy_pass http://${FRONTEND_HOST}:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     # Rutas que empiezan con /api/ van al backend balanceado
     location /api/ {
+        rewrite ^/api/(.*)$ /api/$1 break;
         proxy_pass http://backend_servers/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     # Rutas que empiezan con /compiler/ van al compilador en Python
@@ -22,5 +33,8 @@ server {
     # Todo lo demás va al frontend (Next.js)
     location / {
         proxy_pass http://${FRONTEND_HOST}:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
