Intento de implementar computing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,11 @@ services:
     environment:
       - INSTANCE_NAME=Backend 3
 
-  # compiler:
-  #   build: ./compiler
-  #   ports:
-  #     - "5000:5000"
+  compiler:
+    image: backend3
+    build: ./compiler
+    ports:
+      - "5000:5000"
 
   nginx:
     image: nginx
