--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,11 +41,11 @@ services:
     environment:
       - INSTANCE_NAME=Backend 3
 
-  # compiler:
-  #   image: backend3
-  #   build: ./compiler
-  #   ports:
-  #     - "5000:5000"
+  inference:
+    image: inference
+    build: ./inference
+    ports:
+      - "5000:5000"
 
   nginx:
     image: nginx
@@ -57,6 +57,6 @@ services:
       - backend1
       - backend2
       - backend3
-      # - compiler
+      # - inference
     env_file:
       - .env
