--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -7,14 +7,7 @@ upstream backend_servers {
 server {
     listen 80;
 
-    location /api/evaluate/ {
-        proxy_pass http://${FRONTEND_HOST}:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /api/auth/ {
+    location /api/front/ {
         proxy_pass http://${FRONTEND_HOST}:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
