--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
+    "mongoose": "^8.15.1",
     "nodemon": "^3.1.10"
   }
 }
