--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:20-slim
 
+RUN apt-get update && \
+    apt-get install -y git git-lfs && \
+    git lfs install
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -7,6 +11,9 @@ RUN npm install
 
 COPY . .
 
+RUN git lfs pull
+
+RUN npm ci
 RUN npm run build
 
 EXPOSE 3000
