--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,19 @@ services:
     environment:
       - NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL}
 
-  # mongo:
-  #   image: mongo:5.0                        # Puedes usar la versión que prefieras
-  #   container_name: mongodb
-  #   restart: always
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-  #     MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-  #   volumes:
-  #     - mongo_data:/data/db                 # Volumen para persistir datos
-  #   ports:
-  #     - "27017:27017"                       # Mapea el puerto interno al host
+  mongo:
+    image: mongo:5.0
+    container_name: mongodb
+    restart: always
+    env_file:
+      - .env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    volumes:
+      - mongo_data:/data/db # Volumen para persistir datos
+    ports:
+      - "27017:27017" # Mapea el puerto interno al host
 
 
   backend1:
@@ -33,8 +33,8 @@ services:
       - "4001:4000"
     env_file:
       - .env
-    # depends_on:
-    #   - mongo
+    depends_on:
+      - mongo
     environment:
       - INSTANCE_NAME=Backend 1
 
@@ -45,8 +45,8 @@ services:
       - "4002:4000"
     env_file:
       - .env
-    # depends_on:
-    #   - mongo
+    depends_on:
+      - mongo
     environment:
       - INSTANCE_NAME=Backend 2
 
@@ -57,8 +57,8 @@ services:
       - "4003:4000"
     env_file:
       - .env
-    # depends_on:
-    #   - mongo
+    depends_on:
+      - mongo
     environment:
       - INSTANCE_NAME=Backend 3
 
